Use cached thread pool
there's no reason to spawn even a virtual thread per event